# capstone_final_ws

./: README.md
firmware/4DOF_robot_arm_ver_final/: platformio.ini
firmware/4DOF_robot_arm_ver_final/src/: main.cpp
src/all_in_one_package/launch/: all_in_one_launch.py  all_in_one_launch_v3_student.py  copy_all_in_one_launch.py  generate_map.launch.py  manipulator_all_in_one.launch.py  manipulator_all_in_one_v2.launch.py  manipulator_all_in_one_v3_student.launch.py  student_all_in_one_launch.py
src/amr_cartographer/config/: amr.lua  old_amr.lua
src/amr_cartographer/launch/: amr_cartographer.launch.py
src/amr_navigator/: package.xml  setup.py
src/amr_navigator/amr_navigator/: elevator_delivery_final.py  elevator_delivery_final_with_manipulator.py  elevator_delivery_manager.py  elevator_delivery_manager2.py  indoor_students_manager.py
src/amr_navigator/config/: waypoints.yaml  waypoints2.yaml  waypoints_indoor.yaml
src/amr_navigator/map/: ekf_gen_map_wide.yaml  ekf_gen_map_wide2.yaml  ekf_map_gen.yaml  ff_ekf_1f.pgm  ff_ekf_1f.yaml  ff_ekf_2f_map.pgm  ff_ekf_2f_map.yaml  ff_ekf_3f.pgm  ff_ekf_3f.yaml  ff_ekf_3f_map.pgm  ff_ekf_3f_map.yaml  ff_ekf_B1.pgm  ff_ekf_B1.yaml  indoor_map_final.pgm  indoor_map_final.yaml
src/amr_navigator/params/: 5F_IT_building.yaml  copy_params.yaml  nav2_params.yaml  nav2_params_student.yaml
src/camera_perception_pkg/: setup.py
src/camera_perception_pkg/camera_perception_pkg/: object_distance_node.py
src/camera_perception_pkg/config/: manipulator_perception.yaml
src/camera_perception_pkg/launch/: manipulator_perception.launch.py
src/ebimu_pkg/: setup.py
src/ebimu_pkg/config/: ekf.yaml
src/manipulator/: CMakeLists.txt
src/manipulator_hardware/: CMakeLists.txt  manipulator_hardware.xml  package.xml
src/manipulator_hardware/include/manipulator_hardware/: manipulator_hardware_interface.hpp
src/manipulator_hardware/src/: manipulator_hardware_interface.cpp
src/manipulator_manager/: manipulator_task_system_v2_manual_ko.md  manipulator_task_system_v3_manual_ko.md  manipulator_task_test_commands_ko.md  package.xml  setup.py
(+43 files in other folders)
